fix text alignment

--- a/level3/styles.css
+++ b/level3/styles.css
@@ -63,8 +63,13 @@
 #game-result {
   margin: 0;
   max-width: 100%;
+  height: 3rem;
   text-align: center;
   text-wrap: wrap;
+}
+
+.arena h3 {
+  margin-bottom: auto;
 }
 
 /* Hover and Disabled Effects */
@@ -88,10 +93,10 @@
 
 .arena {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 7rem);
   align-items: center;
   justify-items: center;
-  gap: 1.3rem;
+  gap: 0 1.3rem;
 }
 
 #computer-slot,
